--- a/pluto/src/main/res/values/strings.xml
+++ b/pluto/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="pluto___share_as_file">Share as File</string>
     <string name="pluto___share_as_copy">Copy to Clipboard</string>
     <string name="pluto___share_as_file_hint">Prefer this option while sharing on Slack.</string>
+    <string name="pluto___processing">Processing...</string>
 </resources>
